Added small content to index + added main css file
Nothing yet added

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <html>
-<p>Hanky's World</p>
+
+<head>
+<title>Adam Hankin</title>
+<link rel="stylesheet" href="main.css">
+</head>
+<body>
+<h1>Hanky's World</h1>
+<marquee>OH YH</Marquee>
+</body>
 </html>
