--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 <title>Adam Hankin</title>
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <h1>Hanky's World</h1>
