changed title to something more... professional?

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="/favicon.ico?" type="image/x-icon">
 </head>
 <body>
-<h1>Hanky's World</h1>
+<h1>A Website Belonging to Adam Hankin</h1>
 <p>PLACEHOLDER</p>
 </body>
 </html>
