--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
+<!DOCTYPE HTML>
 <html>
 
-<head>
-<title>Adam Hankin</title>
-<link rel="shortcut icon" href="/favicon.ico?" type="image/x-icon">
-</head>
-<body>
-<h1>A Website Belonging to Adam Hankin</h1>
-<p>PLACEHOLDER</p>
-</body>
+
+  <head>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
+    <meta charset="UTF-8">
+    <title>
+      UP777621 Web Script 3
+    </title>
+  </head>
+
+
+  <body>
+    <header id="header">
+      <div class="container">
+        <h1>
+          Home Dashboard
+        </h1>
+        <nav id="nav">
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Settings</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="content">
+      <div class="container">
+        <p>
+          Some Placeholder Text
+        </p>
+
+        <script src="https://www.reddit.com/hot/.embed?limit=10&t=day" type="text/javascript"></script>
+      </div>
+    </div>
+  </body>
 </html>
