--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>
       UP777621 Web Script 3
     </title>
