Website changed with dashboard template

--- a/index.html
+++ b/index.html
@@ -1,46 +1,39 @@
-<!DOCTYPE HTML>
-<html>
-
-
+<!doctype html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
-    <meta charset="UTF-8">
-    <link rel="shortcut icon" href="/favicon.ico?" type="image/x-icon">
-    <title>
-      UP777621 Web Script 3
-    </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>My Dashboard</title>
+    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
-
-
   <body>
-    <header id="header">
-      <div class="container">
-        <h1>
-          Home Dashboard
-        </h1>
-        <nav id="nav">
-          <ul>
-            <li>
-              <a href="#">Home</a>
-            </li>
-            <li>
-              <a href="#">About</a>
-            </li>
-            <li>
-              <a href="#">Settings</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <div class="content">
-      <div class="container">
-        <p>
-          Some Placeholder Text
-        </p>
 
-        <script src="https://www.reddit.com/hot/.embed?limit=10&t=day" type="text/javascript"></script>
-      </div>
+  <header class="header">
+  <div class="header__inner">
+    <img class="header__logo" src="img/comp_logo.png" alt="company's logo">
+    <h1 class="header__title">
+      My Dashboard
+    </h1>
+  </div>
+</header>
+<main>
+  <div class="container">
+    <div class="box main-graph-1"></div>
+      <div class="container" id="container2">
+        <div class="box der1-graph-1"></div>
+        <div class="box der2-graph-1"></div>
     </div>
-  </body>
+    <div class="box main-graph-2"></div>
+      <div class="container" id="container3">
+        <div class="box der1-graph-2"></div>
+        <div class="box der2-graph-2"></div>
+    </div>
+  </div>
+
+
+</main>
+
+</body>
 </html>
