--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Dashboard</title>
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <script type="text/javascript" src="scripting.js"></script>
   </head>
   <body>
 
@@ -20,9 +21,13 @@
 </header>
 <main>
   <div class="container">
-    <div class="box main-graph-1"></div>
+    <div class="box main-graph-1">
+      <div id="c_c55305ea6504fbad31a3c82c92ddb42a" class="completo"><h2 style="color: #000000; margin: 0 0 3px; padding: 2px; font: bold 13px/1.2 Verdana; text-align: center; width=100%"><a href="http://www.forecast.co.uk/portsmouth.html" style="color: #000000; text-decoration: none; font: bold 13px/1.2 Verdana;">Weather forecast Portsmouth</a></h2><div id="w_c55305ea6504fbad31a3c82c92ddb42a" class="completo" style="height:100%"></div></div><script type="text/javascript" src="http://www.forecast.co.uk/widget/loader/c55305ea6504fbad31a3c82c92ddb42a"></script>
+    </div>
       <div class="container" id="container2">
-        <div class="box der1-graph-1"></div>
+        <div class="box der1-graph-1">
+          <p id="clock"> display time </p>
+        </div>
         <div class="box der2-graph-1"></div>
     </div>
     <div class="box main-graph-2"></div>
