--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 
   <header class="header">
   <div class="header__inner">
-    <img class="header__logo" src="img/comp_logo.png" alt="company's logo">
     <h1 class="header__title">
-      My Dashboard
+      up777621
     </h1>
   </div>
 </header>
 <main>
   <div class="container">
     <div class="box main-graph-1">
-      <div id="c_c55305ea6504fbad31a3c82c92ddb42a" class="completo"><h2 style="color: #000000; margin: 0 0 3px; padding: 2px; font: bold 13px/1.2 Verdana; text-align: center; width=100%"><a href="http://www.forecast.co.uk/portsmouth.html" style="color: #000000; text-decoration: none; font: bold 13px/1.2 Verdana;">Weather forecast Portsmouth</a></h2><div id="w_c55305ea6504fbad31a3c82c92ddb42a" class="completo" style="height:100%"></div></div><script type="text/javascript" src="http://www.forecast.co.uk/widget/loader/c55305ea6504fbad31a3c82c92ddb42a"></script>
+      
     </div>
       <div class="container" id="container2">
         <div class="box der1-graph-1">
-          <p id="clock"> display time </p>
+          <p id ="date"></p>
+          <p id="clock"></p>
         </div>
         <div class="box der2-graph-1"></div>
     </div>
