went with a widget... background always inherited from div

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <main>
   <div class="container">
     <div class="box main-graph-1">
-      <iframe src="https://www.meteoblue.com/en/weather/widget/three/portsmouth_united-kingdom_2639996?geoloc=fixed&nocurrent=0&noforecast=0&days=4&tempunit=CELSIUS&windunit=MILE_PER_HOUR&layout=bright"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 450px;height: 591px"></iframe><div><!-- DO NOT REMOVE THIS LINK --><a href="https://www.meteoblue.com/en/weather/forecast/week/portsmouth_united-kingdom_2639996?utm_source=weather_widget&utm_medium=linkus&utm_content=three&utm_campaign=Weather%2BWidget" target="_blank">meteoblue</a></div>
+      <iframe src="https://www.meteoblue.com/en/weather/widget/three/portsmouth_united-kingdom_2639996?geoloc=fixed&nocurrent=0&noforecast=0&days=4&tempunit=CELSIUS&windunit=MILE_PER_HOUR&layout=bright"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 450px;height: 591px"></iframe><div><a href="https://www.meteoblue.com/en/weather/forecast/week/portsmouth_united-kingdom_2639996?utm_source=weather_widget&utm_medium=linkus&utm_content=three&utm_campaign=Weather%2BWidget" target="_blank">meteoblue</a></div>
     </div>
       <div class="container" id="container2">
         <div class="box der1-graph-1">
