--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script type="text/javascript" src="scripting.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.simpleWeather/3.1.0/jquery.simpleWeather.min.js"></script>
   </head>
   <body>
 
@@ -20,8 +22,7 @@
 </header>
 <main>
   <div class="container">
-    <div class="box main-graph-1">
-      <iframe src="https://www.meteoblue.com/en/weather/widget/three/portsmouth_united-kingdom_2639996?geoloc=fixed&nocurrent=0&noforecast=0&days=4&tempunit=CELSIUS&windunit=MILE_PER_HOUR&layout=bright"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 450px;height: 591px"></iframe><div><a href="https://www.meteoblue.com/en/weather/forecast/week/portsmouth_united-kingdom_2639996?utm_source=weather_widget&utm_medium=linkus&utm_content=three&utm_campaign=Weather%2BWidget" target="_blank">meteoblue</a></div>
+    <div class="box main-graph-1" id="weather">
     </div>
       <div class="container" id="container2">
         <div class="box der1-graph-1">
