--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
           <iframe src="https://www.youtube.com/embed/y60wDzZt8yg" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
-    <div class="box main-graph-2"></div>
+    <div class="box main-graph-2">
+      <iframe src="https://calendar.google.com/calendar/embed?src=bdh2pt88p3thqorj78qp2864hk6r2cc3%40import.calendar.google.com&ctz=Europe/London" style="border: 0" frameborder="0" scrolling="no"></iframe>
+    </div>
       <div class="container" id="container3">
         <div class="box der1-graph-2"></div>
         <div class="box der2-graph-2"></div>
