added twitter, some other stuff too

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
       <iframe src="https://calendar.google.com/calendar/embed?src=bdh2pt88p3thqorj78qp2864hk6r2cc3%40import.calendar.google.com&ctz=Europe/London" style="border: 0" frameborder="0" scrolling="no"></iframe>
     </div>
       <div class="container" id="container3">
-        <div class="box der1-graph-2"></div>
-        <div class="box der2-graph-2"></div>
+        <div class="box der1-graph-2">
+
+        </div>
+        <div class="box der2-graph-2">
+          <a class="twitter-timeline" href="https://twitter.com/BBCNews" data-height="600"></a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
     </div>
   </div>
 
