--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         </div>
         <div class="box der2-graph-2">
-          <a class="twitter-timeline" href="https://twitter.com/BBCNews" data-height="600"></a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <a class="twitter-timeline" id = "tweeter" href="https://twitter.com/BBCNews" data-height="600"></a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
   </div>
