attempting to change the youtube instead

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p id ="date"></p>
           <p id="clock"></p>
         </div>
-        <div class="box der2-graph-1">
+        <div class="box der2-graph-1" id = "youtube">
           <iframe src="https://www.youtube.com/embed/y60wDzZt8yg" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
@@ -42,7 +42,7 @@
 
         </div>
         <div class="box der2-graph-2">
-          <a class="twitter-timeline" id = "tweeter" href="#" data-height="600"></a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <a class="twitter-timeline" id = "tweeter" href="https://twitter.com" data-height="600"></a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
   </div>
