attempt to remove tag and replace with another

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <p id="clock"></p>
         </div>
         <div class="box der2-graph-1" id = "youtube">
-          <iframe src="https://www.youtube.com/embed/y60wDzZt8yg" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/y60wDzZt8yg" frameborder="0" allowfullscreen id = "youtubeEmbed"></iframe>
         </div>
     </div>
     <div class="box main-graph-2">
