attempting to reapply the youtube embed link to twitter

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="box der1-graph-2">
 
         </div>
-        <div class="box der2-graph-2">
-          <a class="twitter-timeline" id = "tweeter" href="https://twitter.com" data-height="600"></a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <div class="box der2-graph-2" id = "twitter">
+
         </div>
     </div>
   </div>
