ditched json... used js localstorage

--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@
           </a>
         </div>
         <div>
-          <input type="text" id="streamName" value="">
+          <input type="text" id="twitchInput" value="">
           <input type="button" value="Watch" onclick="changeTwitch()" />
+        </div>
+        <div>
+          <input type="text" id="youtubeInput" value="">
+          <input type="button" value="Watch" onclick="changeYoutube()" />
         </div>
     </div>
   </div>
