website finished. Only readme and comments are left

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>My Dashboard</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script>window.twttr = (function(d, s, id) {
@@ -38,6 +39,7 @@
       up777621
     </h1>
   </div>
+  <a href = "config.html"><h2>Edit Settings</h2></a>
 </header>
 <main>
   <div class="container">
