--- a/config.html
+++ b/config.html
@@ -36,7 +36,7 @@
       <h2>Changing Youtube stream/video</h2>
       <p>In the box below, please enter the watch ID of a youtube stream/video</p>
       <p>To find this ID, go to the stream/video you would like to view, and copy the following from the URL</p>
-      <img src="youtubelinkexample.jpg"></img>
+      <img src="youtubelinkexample.JPG"></img>
       <p>For instance: "y60wDzZt8yg" will load the Sky News - Live stream</p>
       <input type="text" id="youtubeInput" value="">
       <input type="button" value="Update" onclick="changeYoutube()" />
@@ -47,7 +47,7 @@
       <h2>Changing Twitch Stream</h2>
       <p>In the box below, please enter the username of a user on twitch to view their stream</p>
       <p>To find a streamer's username, go to their twitch page and copy only the following from the url</p>
-      <img src="twitchlinkexample.jpg"></img>
+      <img src="twitchlinkexample.JPG"></img>
       <p>For instance: "bobross" will load the Bob Ross twitch stream</p>
       <input type="text" id="twitchInput" value="">
       <input type="button" value="Update" onclick="changeTwitch()" />
